--- a/lesson-openapi-ts/package.json
+++ b/lesson-openapi-ts/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "devHttps": "next dev --turbopack --experimental-https",
+    "devHttps": "next dev --turbopack --experimental-https -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
